[package]
name = "team172"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxigraph = "0.3.22"
base64 = "0.22.1"
serde = { version = "1.0.204", features = ["derive"] }
quick-xml = { version = "0.36.0" ,features = ["serialize", "serde-types","serde","document-features","default","async-tokio"]}
xml_oxide = "*"
xml-rs = "*"
url = "*"
reqwest = { version = "*" ,features = ["blocking"]}
bzip2 = "*"
once_cell = "1.19.0"
zip = "*"